--- a/apps/crypt-lock/package.json
+++ b/apps/crypt-lock/package.json
@@ -16,8 +16,10 @@
     "@vigooth/config": "workspace:*",
     "@vigooth/styles": "workspace:*",
     "@vigooth/ui": "workspace:*",
+    "i18next": "^25.8.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.5.4",
     "react-router-dom": "^7.12.0",
     "twin.macro": "^3.4.1"
   },
